Freedom Sanbox Ant Deploy/src/objects/ExecutionTracker__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Handle method call to calculate ARPP commission for ET</description>
    <fields>
        <fullName>Is_Execute__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Execute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPP_Deployment_Date__c</fullName>
        <description>This is used for Getting Wrong product name from RPP Deployent Date</description>
        <label>RPP Deployment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Excecution Trigger For ARPP</label>
</CustomObject>